--- a/signup.html
+++ b/signup.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Ducky - Créer un compte</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h2>Créer un compte</h2>
@@ -33,7 +34,7 @@
       </div>
       <div class="text-label button">
         <input type="submit" name="create" id="create" value="Créer un compte">
-        <input type="button" name="quit" id="quit" value="Annuler">
+        <a href="index.html">Annuler</a>
       </div>
     </form>
   </body>
