moved png and css

--- a/connexion.html
+++ b/connexion.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class ="connexion">
                 <button type="submit">Connexion</button>
-                <button type="submit" href="main.html">Annuler</button>
+                <a class="link-button" href="home.html">Annuler</a>
                 </div>
             </form>
         </main>
